画面のリンク、文言の修正等細かい調整

--- a/app/views/alolas/edit.html.erb
+++ b/app/views/alolas/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Alola</h1>
+<h1>ポケモンずかんの編集</h1>
 
 <%= render 'form', alola: @alola %>
 
-<%= link_to 'Show', @alola %> |
-<%= link_to 'Back', alolas_path %>
+<%= link_to '詳細', @alola %> |
+<%= link_to '戻る', alolas_path %>
