--- a/app/views/alolas/show.html.erb
+++ b/app/views/alolas/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @alola.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @alola.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @alola.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @alola.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @alola.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @alola.description %>
 </p>
 
-<%= link_to 'Edit', edit_alola_path(@alola) %> |
-<%= link_to 'Back', alolas_path %>
+<%= link_to '編集', edit_alola_path(@alola) %> |
+<%= link_to '戻る', alolas_path %>
