--- a/app/views/hoenns/edit.html.erb
+++ b/app/views/hoenns/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Hoenn</h1>
+<h1>ポケモンずかんの編集</h1>
 
 <%= render 'form', hoenn: @hoenn %>
 
-<%= link_to 'Show', @hoenn %> |
-<%= link_to 'Back', hoenns_path %>
+<%= link_to '詳細', @hoenn %> |
+<%= link_to '戻る', hoenns_path %>
