--- a/app/views/sinnohs/new.html.erb
+++ b/app/views/sinnohs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Sinnoh</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', sinnoh: @sinnoh %>
 
-<%= link_to 'Back', sinnohs_path %>
+<%= link_to '戻る', sinnohs_path %>
