--- a/app/views/unovas/new.html.erb
+++ b/app/views/unovas/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Unova</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', unova: @unova %>
 
-<%= link_to 'Back', unovas_path %>
+<%= link_to '戻る', unovas_path %>
