--- a/app/views/unovas/show.html.erb
+++ b/app/views/unovas/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @unova.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @unova.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @unova.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @unova.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @unova.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @unova.description %>
 </p>
 
-<%= link_to 'Edit', edit_unova_path(@unova) %> |
-<%= link_to 'Back', unovas_path %>
+<%= link_to '編集', edit_unova_path(@unova) %> |
+<%= link_to '戻る', unovas_path %>
