--- a/app/views/alolas/new.html.erb
+++ b/app/views/alolas/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Alola</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', alola: @alola %>
 
-<%= link_to 'Back', alolas_path %>
+<%= link_to '戻る', alolas_path %>
