--- a/app/views/galars/edit.html.erb
+++ b/app/views/galars/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Galar</h1>
+<h1>ポケモンずかんの編集</h1>
 
 <%= render 'form', galar: @galar %>
 
-<%= link_to 'Show', @galar %> |
-<%= link_to 'Back', galars_path %>
+<%= link_to '詳細', @galar %> |
+<%= link_to '戻る', galars_path %>
