--- a/app/views/galars/new.html.erb
+++ b/app/views/galars/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Galar</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', galar: @galar %>
 
-<%= link_to 'Back', galars_path %>
+<%= link_to '戻る', galars_path %>
