--- a/app/views/galars/show.html.erb
+++ b/app/views/galars/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @galar.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @galar.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @galar.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @galar.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @galar.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @galar.description %>
 </p>
 
-<%= link_to 'Edit', edit_galar_path(@galar) %> |
-<%= link_to 'Back', galars_path %>
+<%= link_to '編集', edit_galar_path(@galar) %> |
+<%= link_to '戻る', galars_path %>
