--- a/app/views/hoenns/new.html.erb
+++ b/app/views/hoenns/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Hoenn</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', hoenn: @hoenn %>
 
-<%= link_to 'Back', hoenns_path %>
+<%= link_to '戻る', hoenns_path %>
