--- a/app/views/hoenns/show.html.erb
+++ b/app/views/hoenns/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @hoenn.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @hoenn.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @hoenn.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @hoenn.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @hoenn.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @hoenn.description %>
 </p>
 
-<%= link_to 'Edit', edit_hoenn_path(@hoenn) %> |
-<%= link_to 'Back', hoenns_path %>
+<%= link_to '編集', edit_hoenn_path(@hoenn) %> |
+<%= link_to '戻る', hoenns_path %>
