--- a/app/views/johtos/edit.html.erb
+++ b/app/views/johtos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Johto</h1>
+<h1>ポケモンずかんの編集</h1>
 
 <%= render 'form', johto: @johto %>
 
-<%= link_to 'Show', @johto %> |
-<%= link_to 'Back', johtos_path %>
+<%= link_to '詳細', @johto %> |
+<%= link_to '戻る', johtos_path %>
