--- a/app/views/johtos/index.html.erb
+++ b/app/views/johtos/index.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Johtos</h1>
+<h1>ジョウト地方</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Type 1</th>
-      <th>Type 2</th>
-      <th>Height</th>
-      <th>Weight</th>
-      <th>Description</th>
+      <th>名前</th>
+      <th>タイプ1</th>
+      <th>タイプ2</th>
+      <th>高さ</th>
+      <th>重さ</th>
+      <th>説明</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,9 +24,9 @@
         <td><%= johto.height %></td>
         <td><%= johto.weight %></td>
         <td><%= johto.description %></td>
-        <td><%= link_to 'Show', johto %></td>
-        <td><%= link_to 'Edit', edit_johto_path(johto) %></td>
-        <td><%= link_to 'Destroy', johto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', johto %></td>
+        <td><%= link_to '編集', edit_johto_path(johto) %></td>
+        <td><%= link_to '削除', johto, method: :delete, data: { confirm: '削除してもいいですか?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +34,6 @@
 
 <br>
 
-<%= link_to 'New Johto', new_johto_path %>
+<%= link_to '新しいポケモンを登録する', new_johto_path %>
+
+<%= link_to 'ホーム', home_index_path %>
