--- a/app/views/johtos/new.html.erb
+++ b/app/views/johtos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Johto</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', johto: @johto %>
 
-<%= link_to 'Back', johtos_path %>
+<%= link_to '戻る', johtos_path %>
