--- a/app/views/johtos/show.html.erb
+++ b/app/views/johtos/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @johto.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @johto.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @johto.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @johto.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @johto.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @johto.description %>
 </p>
 
-<%= link_to 'Edit', edit_johto_path(@johto) %> |
-<%= link_to 'Back', johtos_path %>
+<%= link_to '編集', edit_johto_path(@johto) %> |
+<%= link_to '戻る', johtos_path %>
