--- a/app/views/kalos/edit.html.erb
+++ b/app/views/kalos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Kalo</h1>
+<h1>ポケモンずかんの編集</h1>
 
 <%= render 'form', kalo: @kalo %>
 
-<%= link_to 'Show', @kalo %> |
-<%= link_to 'Back', kalos_path %>
+<%= link_to '詳細', @kalo %> |
+<%= link_to '戻る', kalos_path %>
