--- a/app/views/kalos/new.html.erb
+++ b/app/views/kalos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Kalo</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', kalo: @kalo %>
 
-<%= link_to 'Back', kalos_path %>
+<%= link_to '戻る', kalos_path %>
