--- a/app/views/kalos/show.html.erb
+++ b/app/views/kalos/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @kalo.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @kalo.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @kalo.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @kalo.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @kalo.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @kalo.description %>
 </p>
 
-<%= link_to 'Edit', edit_kalo_path(@kalo) %> |
-<%= link_to 'Back', kalos_path %>
+<%= link_to '編集', edit_kalo_path(@kalo) %> |
+<%= link_to '戻る', kalos_path %>
