--- a/app/views/kantos/new.html.erb
+++ b/app/views/kantos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Kanto</h1>
+<h1>新しいポケモンをずかんに登録</h1>
 
 <%= render 'form', kanto: @kanto %>
 
-<%= link_to 'Back', kantos_path %>
+<%= link_to '戻る', kantos_path %>
