--- a/app/views/kantos/show.html.erb
+++ b/app/views/kantos/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @kanto.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @kanto.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @kanto.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @kanto.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @kanto.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @kanto.description %>
 </p>
 
-<%= link_to 'Edit', edit_kanto_path(@kanto) %> |
-<%= link_to 'Back', kantos_path %>
+<%= link_to '編集', edit_kanto_path(@kanto) %> |
+<%= link_to '戻る', kantos_path %>
