--- a/app/views/sinnohs/edit.html.erb
+++ b/app/views/sinnohs/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Sinnoh</h1>
+<h1>ポケモンずかんの編集</h1>
 
 <%= render 'form', sinnoh: @sinnoh %>
 
-<%= link_to 'Show', @sinnoh %> |
-<%= link_to 'Back', sinnohs_path %>
+<%= link_to '詳細', @sinnoh %> |
+<%= link_to '戻る', sinnohs_path %>
