--- a/app/views/sinnohs/show.html.erb
+++ b/app/views/sinnohs/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>名前:</strong>
   <%= @sinnoh.name %>
 </p>
 
 <p>
-  <strong>Type 1:</strong>
+  <strong>タイプ1:</strong>
   <%= @sinnoh.type_1 %>
 </p>
 
 <p>
-  <strong>Type 2:</strong>
+  <strong>タイプ2:</strong>
   <%= @sinnoh.type_2 %>
 </p>
 
 <p>
-  <strong>Height:</strong>
+  <strong>高さ:</strong>
   <%= @sinnoh.height %>
 </p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>重さ:</strong>
   <%= @sinnoh.weight %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>説明:</strong>
   <%= @sinnoh.description %>
 </p>
 
-<%= link_to 'Edit', edit_sinnoh_path(@sinnoh) %> |
-<%= link_to 'Back', sinnohs_path %>
+<%= link_to '編集', edit_sinnoh_path(@sinnoh) %> |
+<%= link_to '戻る', sinnohs_path %>
