--- a/app/views/unovas/edit.html.erb
+++ b/app/views/unovas/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Unova</h1>
+<h1>ポケモンずかんの編集</h1>
 
 <%= render 'form', unova: @unova %>
 
-<%= link_to 'Show', @unova %> |
-<%= link_to 'Back', unovas_path %>
+<%= link_to '詳細', @unova %> |
+<%= link_to '戻る', unovas_path %>
