--- a/app/views/hoenns/_form.html.slim
+++ b/app/views/hoenns/_form.html.slim
@@ -9,6 +9,9 @@
           li
             = message
   .field
+    = form.label :number
+    = form.text_field :number
+  .field
     = form.label :name
     = form.text_field :name
   .field
