--- a/app/views/kantos/index.html.slim
+++ b/app/views/kantos/index.html.slim
@@ -6,6 +6,8 @@ table
   thead
     tr
       th
+        | 番号
+      th
         | 名前
       th
         | タイプ1
@@ -21,6 +23,8 @@ table
   tbody
     - @kantos.each do |kanto|
       tr
+        td
+          = kanto.number
         td
           = kanto.name
         td
