--- a/app/views/sinnohs/index.html.slim
+++ b/app/views/sinnohs/index.html.slim
@@ -6,6 +6,8 @@ table
   thead
     tr
       th
+        | 番号
+      th
         | 名前
       th
         | タイプ1
@@ -21,6 +23,8 @@ table
   tbody
     - @sinnohs.each do |sinnoh|
       tr
+        td
+          = sinnoh.number
         td
           = sinnoh.name
         td
