--- a/app/views/unovas/index.html.slim
+++ b/app/views/unovas/index.html.slim
@@ -6,6 +6,8 @@ table
   thead
     tr
       th
+        | 番号
+      th
         | 名前
       th
         | タイプ1
@@ -21,6 +23,8 @@ table
   tbody
     - @unovas.each do |unova|
       tr
+        td
+          = unova.number
         td
           = unova.name
         td
