--- a/app/views/johtos/show.html.slim
+++ b/app/views/johtos/show.html.slim
@@ -1,38 +1,30 @@
-p#notice
-  = notice
-p
-  strong
-    | 番号:
-  = @johto.number
-p
-  strong
-    | 名前:
-  = @johto.name
-p
-  strong
-    | タイプ1:
-  = @johto.type_1
-p
-  strong
-    | タイプ2:
-  = @johto.type_2
-p
-  strong
-    | 高さ:
-  = @johto.height
-p
-  strong
-    | 重さ:
-  = @johto.weight
-p
-  strong
-    | 説明:
-  = @johto.description
-- if @johto.image?
-  p
-    strong
-      | 画像:
-    = image_tag @johto.image.to_s
-= link_to '編集', edit_johto_path(@johto)
-|  | 
-= link_to '戻る', johtos_path
+h1 ポケモンずかんの詳細
+
+table.table.table-hover
+  tbody
+    tr
+      th = Johto.human_attribute_name(:number)
+      td = @johto.number
+    tr
+      th = Johto.human_attribute_name(:name)
+      td = @johto.name
+    tr
+      th = Johto.human_attribute_name(:type_1)
+      td = @johto.type_1
+    tr
+      th = Johto.human_attribute_name(:type_2)
+      td = @johto.type_2
+    tr
+      th = Johto.human_attribute_name(:height)
+      td = @johto.height
+    tr
+      th = Johto.human_attribute_name(:weight)
+      td = @johto.weight
+    tr
+      th = Johto.human_attribute_name(:description)
+      td = @johto.description
+    tr
+      th = Johto.human_attribute_name(:image)
+      td = image_tag @johto.image.to_s
+= link_to '編集', edit_johto_path(@johto), class: 'btn btn-primary mr-3'
+= link_to '戻る', johtos_path, class: 'btn btn-primary mr-3'
