--- a/app/views/kantos/index.html.slim
+++ b/app/views/kantos/index.html.slim
@@ -1,51 +1,33 @@
-p#notice
-  = notice
-h1
-  | カントー地方
-table
-  thead
-    tr
-      th
-        | 番号
-      th
-        | 名前
-      th
-        | タイプ1
-      th
-        | タイプ2
-      th
-        | 高さ
-      th
-        | 重さ
-      th
-        | 説明
-      th
-        | 画像
-      th[colspan="3"]
-  tbody
-    - @kantos.each do |kanto|
+h1 カントー地方
+
+.mb-3
+  table.table.table-hover
+    thead.thead-default
       tr
-        td
-          = kanto.number
-        td
-          = kanto.name
-        td
-          = kanto.type_1
-        td
-          = kanto.type_2
-        td
-          = kanto.height
-        td
-          = kanto.weight
-        td
-          = kanto.description
-        td
-          = image_tag kanto.image.to_s
-        td
-          = link_to '詳細', kanto
-        td
-          = link_to '編集', edit_kanto_path(kanto)
-        td
-          = link_to '削除', kanto, method: :delete, data: { confirm: '削除してもいいですか?' }
+        th = Kanto.human_attribute_name(:number)
+        th = Kanto.human_attribute_name(:name)
+        th = Kanto.human_attribute_name(:type_1)
+        th = Kanto.human_attribute_name(:type_2)
+        th = Kanto.human_attribute_name(:height)
+        th = Kanto.human_attribute_name(:weight)
+        th = Kanto.human_attribute_name(:description)
+        th = Kanto.human_attribute_name(:image)
+    tbody
+      - @kantos.each do |kanto|
+        tr
+          td = kanto.number
+          td = kanto.name
+          td = kanto.type_1
+          td = kanto.type_2
+          td = kanto.height
+          td = kanto.weight
+          td = kanto.description
+          td= image_tag kanto.image.to_s
+          td
+            = link_to '詳細', kanto, class: 'btn btn-primary'
+          td
+            = link_to '編集', edit_kanto_path(kanto), class: 'btn btn-primary'
+          td
+            = link_to '削除', kanto, method: :delete, data: { confirm: '削除してもいいですか?' }, class: 'btn btn-danger'
 br
-= link_to '新しいポケモンを登録する', new_kanto_path
+= link_to '新しいポケモンを登録する', new_kanto_path, class: 'btn btn-primary'
