--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -46,5 +46,6 @@ header.navi
       a[href="destroy_user_session"]
         span.nav-label
           = "ログアウト"
+          = link_to :ログアウト, destroy_user_session_path
 
 script[src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"]
