--- a/app/views/alolas/new.html.slim
+++ b/app/views/alolas/new.html.slim
@@ -1,4 +1,6 @@
-h1
-  | 新しいポケモンをずかんに登録
-= render 'form', alola: @alola
-= link_to '戻る', alolas_path
+h1 新しいポケモンをずかんに登録
+
+.nav.justify-content-start
+  = render 'form', alola: @alola
+
+= link_to '戻る', alolas_path, class: 'btn btn-primary mr-3'
