--- a/app/views/alolas/show.html.slim
+++ b/app/views/alolas/show.html.slim
@@ -1,38 +1,30 @@
-p#notice
-  = notice
-p
-  strong
-    | 番号:
-  = @alola.number
-p
-  strong
-    | 名前:
-  = @alola.name
-p
-  strong
-    | タイプ1:
-  = @alola.type_1
-p
-  strong
-    | タイプ2:
-  = @alola.type_2
-p
-  strong
-    | 高さ:
-  = @alola.height
-p
-  strong
-    | 重さ:
-  = @alola.weight
-p
-  strong
-    | 説明:
-  = @alola.description
-- if @alola.image?
-  p
-    strong
-      | 画像:
-    = image_tag @alola.image.to_s
-= link_to '編集', edit_alola_path(@alola)
-|  | 
-= link_to '戻る', alolas_path
+h1 ポケモンずかんの詳細
+
+table.table.table-hover
+  tbody
+    tr
+      th = Alola.human_attribute_name(:number)
+      td = @alola.number
+    tr
+      th = Alola.human_attribute_name(:name)
+      td = @alola.name
+    tr
+      th = Alola.human_attribute_name(:type_1)
+      td = @alola.type_1
+    tr
+      th = Alola.human_attribute_name(:type_2)
+      td = @alola.type_2
+    tr
+      th = Alola.human_attribute_name(:height)
+      td = @alola.height
+    tr
+      th = Alola.human_attribute_name(:weight)
+      td = @alola.weight
+    tr
+      th = Alola.human_attribute_name(:description)
+      td = @alola.description
+    tr
+      th = Alola.human_attribute_name(:image)
+      td = image_tag @alola.image.to_s
+= link_to '編集', edit_alola_path(@alola), class: 'btn btn-primary mr-3'
+= link_to '戻る', alolas_path, class: 'btn btn-primary mr-3'
