--- a/app/views/hoenns/index.html.slim
+++ b/app/views/hoenns/index.html.slim
@@ -1,51 +1,33 @@
-p#notice
-  = notice
-h1
-  | ホウエン地方
-table
-  thead
-    tr
-      th
-        | 番号
-      th
-        | 名前
-      th
-        | タイプ1
-      th
-        | タイプ2
-      th
-        | 高さ
-      th
-        | 重さ
-      th
-        | 説明
-      th
-        | 画像
-      th[colspan="3"]
-  tbody
-    - @hoenns.each do |hoenn|
+h1 ホウエン地方
+
+.mb-3
+  table.table.table-hover
+    thead.thead-default
       tr
-        td
-          = hoenn.number
-        td
-          = hoenn.name
-        td
-          = hoenn.type_1
-        td
-          = hoenn.type_2
-        td
-          = hoenn.height
-        td
-          = hoenn.weight
-        td
-          = hoenn.description
-        td
-          = image_tag hoenn.image.to_s
-        td
-          = link_to '詳細', hoenn
-        td
-          = link_to '編集', edit_hoenn_path(hoenn)
-        td
-          = link_to '削除', hoenn, method: :delete, data: { confirm: 'Are you sure?' }
+        th = Hoenn.human_attribute_name(:number)
+        th = Hoenn.human_attribute_name(:name)
+        th = Hoenn.human_attribute_name(:type_1)
+        th = Hoenn.human_attribute_name(:type_2)
+        th = Hoenn.human_attribute_name(:height)
+        th = Hoenn.human_attribute_name(:weight)
+        th = Hoenn.human_attribute_name(:description)
+        th = Hoenn.human_attribute_name(:image)
+    tbody
+      - @hoenns.each do |hoenn|
+        tr
+          td = hoenn.number
+          td = hoenn.name
+          td = hoenn.type_1
+          td = hoenn.type_2
+          td = hoenn.height
+          td = hoenn.weight
+          td = hoenn.description
+          td= image_tag hoenn.image.to_s
+          td
+            = link_to '詳細', hoenn, class: 'btn btn-primary'
+          td
+            = link_to '編集', edit_hoenn_path(hoenn), class: 'btn btn-primary'
+          td
+            = link_to '削除', hoenn, method: :delete, data: { confirm: '削除してもいいですか?' }, class: 'btn btn-danger'
 br
-= link_to '新しいポケモンを登録する', new_hoenn_path
+= link_to '新しいポケモンを登録する', new_hoenn_path, class: 'btn btn-primary'
