--- a/app/views/kalos/index.html.slim
+++ b/app/views/kalos/index.html.slim
@@ -1,51 +1,36 @@
-p#notice
-  = notice
-h1
-  | カロス地方
-table
-  thead
-    tr
-      th
-        | 番号
-      th
-        | 名前
-      th
-        | タイプ1
-      th
-        | タイプ2
-      th
-        | 高さ
-      th
-        | 重さ
-      th
-        | 説明
-      th
-        | 画像
-      th[colspan="3"]
-  tbody
-    - @kalos.each do |kalo|
+h1 カロス地方
+
+.mb-3
+  table.table.table-hover
+    thead.thead-default
       tr
-        td
-          = kalo.number
-        td
-          = kalo.name
-        td
-          = kalo.type_1
-        td
-          = kalo.type_2
-        td
-          = kalo.height
-        td
-          = kalo.weight
-        td
-          = kalo.description
-        td
-          = image_tag kalo.image.to_s
-        td
-          = link_to '詳細', kalo
-        td
-          = link_to '編集', edit_kalo_path(kalo)
-        td
-          = link_to '削除', kalo, method: :delete, data: { confirm: '削除してもいいですか?' }
+        th = Kalo.human_attribute_name(:number)
+        th = Kalo.human_attribute_name(:name)
+        th = Kalo.human_attribute_name(:type_1)
+        th = Kalo.human_attribute_name(:type_2)
+        th = Kalo.human_attribute_name(:height)
+        th = Kalo.human_attribute_name(:weight)
+        th = Kalo.human_attribute_name(:description)
+        th = Kalo.human_attribute_name(:image)
+        th
+        th
+        th
+    tbody
+      - @kalos.each do |kalo|
+        tr
+          td = kalo.number
+          td = kalo.name
+          td = kalo.type_1
+          td = kalo.type_2
+          td = kalo.height
+          td = kalo.weight
+          td = kalo.description
+          td= image_tag kalo.image.to_s
+          td
+            = link_to '詳細', kalo, class: 'btn btn-primary'
+          td
+            = link_to '編集', edit_kalo_path(kalo), class: 'btn btn-primary'
+          td
+            = link_to '削除', kalo, method: :delete, data: { confirm: '削除してもいいですか?' }, class: 'btn btn-danger'
 br
-= link_to '新しいポケモンを登録する', new_kalo_path
+= link_to '新しいポケモンを登録する', new_kalo_path, class: 'btn btn-primary'
