--- a/app/views/sinnohs/edit.html.slim
+++ b/app/views/sinnohs/edit.html.slim
@@ -4,3 +4,11 @@ h1
 = link_to '詳細', @sinnoh
 |  | 
 = link_to '戻る', sinnohs_path
+
+h1 ポケモンずかんの編集
+
+.nav.justify-content-start
+  = render 'form', sinnoh: @sinnoh
+
+= link_to '詳細', @sinnoh, class: 'btn btn-primary mr-3'
+= link_to '戻る', sinnohs_path, class: 'btn btn-primary mr-3'
