--- a/app/views/unovas/edit.html.slim
+++ b/app/views/unovas/edit.html.slim
@@ -1,6 +1,7 @@
-h1
-  | ポケモンずかんの編集
-= render 'form', unova: @unova
-= link_to '詳細', @unova
-|  | 
-= link_to '戻る', unovas_path
+h1 ポケモンずかんの編集
+
+.nav.justify-content-start
+  = render 'form', unova: @unova
+
+= link_to '詳細', @unova, class: 'btn btn-primary mr-3'
+= link_to '戻る', unovas_path, class: 'btn btn-primary mr-3'
